Adding personal form test and refactoring project structure

--- a/src/containers/Register/style.less
+++ b/src/containers/Register/style.less
@@ -5,11 +5,17 @@
 	background-size: cover !important;
 	background-repeat: no-repeat !important;
 
+	h1 {
+		margin: 5%;
+		text-align: center;
+		color: white;
+	}
+
 	header {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		margin-bottom: 5%;
+		margin: 5%;
 		font-family: 'Raleway', sans-serif;
 	
 		img {
